--- a/public/appsData.json
+++ b/public/appsData.json
@@ -8,7 +8,7 @@
     "size": 210,
     "reviews": 18500000,
     "ratingAvg": 4.3,
-    "downloads": 5000000000,
+    "downloads": 50,
     "ratings": [
       { "name": "1 star", "count": 1850000 },
       { "name": "2 star", "count": 925000 },
@@ -26,7 +26,7 @@
     "size": 105,
     "reviews": 4200000,
     "ratingAvg": 4.5,
-    "downloads": 10000000000,
+    "downloads": 100,
     "ratings": [
       { "name": "1 star", "count": 210000 },
       { "name": "2 star", "count": 168000 },
@@ -44,7 +44,7 @@
     "size": 180,
     "reviews": 12000000,
     "ratingAvg": 4.1,
-    "downloads": 5000000000,
+    "downloads": 50,
     "ratings": [
       { "name": "1 star", "count": 1500000 },
       { "name": "2 star", "count": 720000 },
@@ -62,7 +62,7 @@
     "size": 195,
     "reviews": 8700000,
     "ratingAvg": 4.4,
-    "downloads": 2000000000,
+    "downloads": 20,
     "ratings": [
       { "name": "1 star", "count": 870000 },
       { "name": "2 star", "count": 435000 },
@@ -80,7 +80,7 @@
     "size": 170,
     "reviews": 15000000,
     "ratingAvg": 4.2,
-    "downloads": 10000000000,
+    "downloads": 100,
     "ratings": [
       { "name": "1 star", "count": 2250000 },
       { "name": "2 star", "count": 1200000 },
@@ -98,7 +98,7 @@
     "size": 160,
     "reviews": 9500000,
     "ratingAvg": 4.0,
-    "downloads": 1000000000,
+    "downloads": 10,
     "ratings": [
       { "name": "1 star", "count": 1900000 },
       { "name": "2 star", "count": 950000 },
@@ -116,7 +116,7 @@
     "size": 250,
     "reviews": 5600000,
     "ratingAvg": 4.6,
-    "downloads": 1000000000,
+    "downloads": 10,
     "ratings": [
       { "name": "1 star", "count": 280000 },
       { "name": "2 star", "count": 168000 },
@@ -152,7 +152,7 @@
     "size": 200,
     "reviews": 11000000,
     "ratingAvg": 4.3,
-    "downloads": 3000000000,
+    "downloads": 30,
     "ratings": [
       { "name": "1 star", "count": 1650000 },
       { "name": "2 star", "count": 880000 },
@@ -206,7 +206,7 @@
     "size": 175,
     "reviews": 6800000,
     "ratingAvg": 4.2,
-    "downloads": 1000000000,
+    "downloads": 10,
     "ratings": [
       { "name": "1 star", "count": 1020000 },
       { "name": "2 star", "count": 544000 },
@@ -332,7 +332,7 @@
     "size": 155,
     "reviews": 3800000,
     "ratingAvg": 4.2,
-    "downloads": 1000000000,
+    "downloads": 10,
     "ratings": [
       { "name": "1 star", "count": 570000 },
       { "name": "2 star", "count": 304000 },
@@ -350,7 +350,7 @@
     "size": 145,
     "reviews": 13000000,
     "ratingAvg": 4.6,
-    "downloads": 10000000000,
+    "downloads": 100,
     "ratings": [
       { "name": "1 star", "count": 390000 },
       { "name": "2 star", "count": 260000 },
