--- a/public/appsData.json
+++ b/public/appsData.json
@@ -8,7 +8,7 @@
     "size": 150,
     "reviews": 1250000,
     "ratingAvg": 4.8,
-    "downloads": "10M",
+    "downloads": 10000,
     "ratings": [
       { "name": "1 star", "count": 25000 },
       { "name": "2 star", "count": 15000 },
@@ -26,7 +26,7 @@
     "size": 6.5,
     "reviews": 250000,
     "ratingAvg": 4.7,
-    "downloads": "10M",
+    "downloads": 10000,
     "ratings": [
       { "name": "1 star", "count": 5000 },
       { "name": "2 star", "count": 7000 },
@@ -44,7 +44,7 @@
     "size": 91.4,
     "reviews": 35000,
     "ratingAvg": 4.5,
-    "downloads": "7.1M",
+    "downloads": 7100,
     "ratings": [
       { "name": "1 star", "count": 1500 },
       { "name": "2 star", "count": 2500 },
@@ -62,7 +62,7 @@
     "size": 45,
     "reviews": 12000,
     "ratingAvg": 4.8,
-    "downloads": "500K",
+    "downloads": 500,
     "ratings": [
       { "name": "1 star", "count": 100 },
       { "name": "2 star", "count": 200 },
@@ -80,7 +80,7 @@
     "size": 22,
     "reviews": 98000,
     "ratingAvg": 4.6,
-    "downloads": "5M",
+    "downloads": 5000,
     "ratings": [
       { "name": "1 star", "count": 3000 },
       { "name": "2 star", "count": 4000 },
@@ -98,7 +98,7 @@
     "size": 30,
     "reviews": 5500,
     "ratingAvg": 4.3,
-    "downloads": "800K",
+    "downloads": 800,
     "ratings": [
       { "name": "1 star", "count": 400 },
       { "name": "2 star", "count": 600 },
@@ -116,7 +116,7 @@
     "size": 110,
     "reviews": 75000,
     "ratingAvg": 4.6,
-    "downloads": "3M",
+    "downloads": 3000,
     "ratings": [
       { "name": "1 star", "count": 1800 },
       { "name": "2 star", "count": 2200 },
@@ -134,7 +134,7 @@
     "size": 85,
     "reviews": 3200000,
     "ratingAvg": 4.7,
-    "downloads": "50M",
+    "downloads": 5000,
     "ratings": [
       { "name": "1 star", "count": 80000 },
       { "name": "2 star", "count": 60000 },
@@ -152,7 +152,7 @@
     "size": 40,
     "reviews": 150000,
     "ratingAvg": 4.6,
-    "downloads": "9M",
+    "downloads": 9000,
     "ratings": [
       { "name": "1 star", "count": 3000 },
       { "name": "2 star", "count": 4500 },
@@ -170,7 +170,7 @@
     "size": 25,
     "reviews": 48000,
     "ratingAvg": 4.5,
-    "downloads": "2.5M",
+    "downloads": 2500,
     "ratings": [
       { "name": "1 star", "count": 1500 },
       { "name": "2 star", "count": 2000 },
@@ -188,7 +188,7 @@
     "size": 18,
     "reviews": 95000,
     "ratingAvg": 4.9,
-    "downloads": "6M",
+    "downloads": 6000,
     "ratings": [
       { "name": "1 star", "count": 500 },
       { "name": "2 star", "count": 800 },
@@ -206,7 +206,7 @@
     "size": 70,
     "reviews": 45000,
     "ratingAvg": 4.5,
-    "downloads": "2M",
+    "downloads": 2000,
     "ratings": [
       { "name": "1 star", "count": 1200 },
       { "name": "2 star", "count": 1800 },
@@ -224,7 +224,7 @@
     "size": 65,
     "reviews": 150000,
     "ratingAvg": 4.7,
-    "downloads": "4M",
+    "downloads": 4000,
     "ratings": [
       { "name": "1 star", "count": 2000 },
       { "name": "2 star", "count": 3000 },
@@ -242,7 +242,7 @@
     "size": 12,
     "reviews": 280000,
     "ratingAvg": 4.6,
-    "downloads": "12M",
+    "downloads": 12000,
     "ratings": [
       { "name": "1 star", "count": 7000 },
       { "name": "2 star", "count": 11000 },
@@ -260,7 +260,7 @@
     "size": 55,
     "reviews": 75000,
     "ratingAvg": 4.4,
-    "downloads": "3.5M",
+    "downloads": 3500,
     "ratings": [
       { "name": "1 star", "count": 5000 },
       { "name": "2 star", "count": 6000 },
@@ -278,7 +278,7 @@
     "size": 80,
     "reviews": 450000,
     "ratingAvg": 4.7,
-    "downloads": "2M",
+    "downloads": 2000,
     "ratings": [
       { "name": "1 star", "count": 8000 },
       { "name": "2 star", "count": 10000 },
@@ -296,7 +296,7 @@
     "size": 15,
     "reviews": 65000,
     "ratingAvg": 4.8,
-    "downloads": "1M",
+    "downloads": 1000,
     "ratings": [
       { "name": "1 star", "count": 500 },
       { "name": "2 star", "count": 1000 },
@@ -314,7 +314,7 @@
     "size": 9.5,
     "reviews": 90000,
     "ratingAvg": 4.5,
-    "downloads": "5M",
+    "downloads": 5000,
     "ratings": [
       { "name": "1 star", "count": 2000 },
       { "name": "2 star", "count": 3000 },
@@ -332,7 +332,7 @@
     "size": 42,
     "reviews": 32000,
     "ratingAvg": 4.2,
-    "downloads": "800K",
+    "downloads": 800,
     "ratings": [
       { "name": "1 star", "count": 1000 },
       { "name": "2 star", "count": 2500 },
@@ -350,7 +350,7 @@
     "size": 5.1,
     "reviews": 22000,
     "ratingAvg": 4.7,
-    "downloads": "1.5M",
+    "downloads": 105,
     "ratings": [
       { "name": "1 star", "count": 500 },
       { "name": "2 star", "count": 800 },
