img link, loading spinner file, uninstall toast added

--- a/public/appsData.json
+++ b/public/appsData.json
@@ -1,6 +1,6 @@
 [
   {
-    "image": "../src/assets/demo-app (2).webp",
+    "image": "https://i.ibb.co/3mFkcYwN/demo-app-2.webp",
     "title": "Forest: Focus For Productivity",
     "companyName": "Seekrtech",
     "id": 101,
@@ -18,7 +18,7 @@
     ]
   },
   {
-    "image": "../src/assets/demo-app (6).webp",
+    "image": "https://i.ibb.co/JjjBh1VH/demo-app-6.webp",
     "title": "SmPlanc: ToDo List With Reminder",
     "companyName": "SM Plan",
     "id": 102,
@@ -36,7 +36,7 @@
     ]
   },
   {
-    "image": "../src/assets/demo-app (3).webp",
+    "image": "https://i.ibb.co/j9KXGkyW/demo-app-3.webp",
     "title": "FLIP - Focus Timer For Study",
     "companyName": "RinaSoft",
     "id": 103,
@@ -54,7 +54,7 @@
     ]
   },
   {
-    "image": "../src/assets/demo-app (1).webp",
+    "image": "https://i.ibb.co/zTCjnWMt/demo-app-1.webp",
     "title": "Pomocat - Cute Pomodoro Timer",
     "companyName": "ENFP Dev Master",
     "id": 104,
@@ -72,7 +72,7 @@
     ]
   },
   {
-    "image": "../src/assets/demo-app (5).webp",
+    "image": "https://i.ibb.co/vxSJ9sPk/demo-app-5.webp",
     "title": "Time Planner: Schedule & Tasks",
     "companyName": "Home Dev Studio",
     "id": 105,
@@ -90,7 +90,7 @@
     ]
   },
   {
-    "image": "../src/assets/demo-app (4).webp",
+    "image": "https://i.ibb.co/mCFZvDDZ/demo-app-4.webp",
     "title": "Morning Habits - Daily Routine",
     "companyName": "Habit Builder Apps",
     "id": 106,
@@ -108,7 +108,7 @@
     ]
   },
   {
-    "image": "../src/assets/demo-app (2).webp",
+    "image": "https://i.ibb.co/3mFkcYwN/demo-app-2.webp",
     "title": "Focus Plant: Pomodoro Forest",
     "companyName": "Shikudo - Walking and Focus Games",
     "id": 107,
@@ -126,7 +126,7 @@
     ]
   },
   {
-    "image": "../src/assets/demo-app (5).webp",
+    "image": "https://i.ibb.co/vxSJ9sPk/demo-app-5.webp",
     "title": "Alarmy - Alarm Clock & Sleep",
     "companyName": "Delight Room Co., Ltd.",
     "id": 108,
@@ -144,7 +144,7 @@
     ]
   },
   {
-    "image": "../src/assets/demo-app (4).webp",
+    "image": "https://i.ibb.co/mCFZvDDZ/demo-app-4.webp",
     "title": "WaterMinder - Daily Hydration",
     "companyName": "FabuFocus Dev",
     "id": 109,
@@ -162,7 +162,7 @@
     ]
   },
   {
-    "image": "../src/assets/demo-app (3).webp",
+    "image": "https://i.ibb.co/j9KXGkyW/demo-app-3.webp",
     "title": "Budget Planner: Expense Tracker",
     "companyName": "MoneyFlow Studios",
     "id": 110,
@@ -180,7 +180,7 @@
     ]
   },
   {
-    "image": "../src/assets/demo-app (5).webp",
+    "image": "https://i.ibb.co/vxSJ9sPk/demo-app-5.webp",
     "title": "Zen Habit Tracker",
     "companyName": "Minimalist Apps Inc.",
     "id": 111,
@@ -198,7 +198,7 @@
     ]
   },
   {
-    "image": "../src/assets/demo-app (1).webp",
+    "image": "https://i.ibb.co/zTCjnWMt/demo-app-1.webp",
     "title": "Study Bunny: Focus & Study Time",
     "companyName": "Study Pal Devs",
     "id": 112,
@@ -216,7 +216,7 @@
     ]
   },
   {
-    "image": "../src/assets/demo-app (2).webp",
+    "image": "https://i.ibb.co/3mFkcYwN/demo-app-2.webp",
     "title": "Plantie: Focus Timer",
     "companyName": "GreenMind Labs",
     "id": 113,
@@ -234,7 +234,7 @@
     ]
   },
   {
-    "image": "../src/assets/demo-app (3).webp",
+    "image": "https://i.ibb.co/j9KXGkyW/demo-app-3.webp",
     "title": "Study Flow - Pomodoro Tracker",
     "companyName": "FlowState Tech",
     "id": 114,
@@ -252,7 +252,7 @@
     ]
   },
   {
-    "image": "../src/assets/demo-app (6).webp",
+    "image": "https://i.ibb.co/JjjBh1VH/demo-app-6.webp",
     "title": "TaskMaster Pro: Daily Planner",
     "companyName": "ProducTech Solutions",
     "id": 115,
@@ -270,7 +270,7 @@
     ]
   },
   {
-    "image": "../src/assets/demo-app (5).webp",
+    "image": "https://i.ibb.co/vxSJ9sPk/demo-app-5.webp",
     "title": "ChronoDog - Time Companion",
     "companyName": "Pup Productivity",
     "id": 116,
@@ -288,7 +288,7 @@
     ]
   },
   {
-    "image": "../src/assets/demo-app (1).webp",
+    "image": "https://i.ibb.co/zTCjnWMt/demo-app-1.webp",
     "title": "Recur: Build Daily Streaks",
     "companyName": "Consistency Labs",
     "id": 117,
@@ -306,7 +306,7 @@
     ]
   },
   {
-    "image": "../src/assets/demo-app (5).webp",
+    "image": "https://i.ibb.co/vxSJ9sPk/demo-app-5.webp",
     "title": "Hydrate Now! Water Reminder",
     "companyName": "HealthFlow Apps",
     "id": 118,
@@ -324,7 +324,7 @@
     ]
   },
   {
-    "image": "../src/assets/demo-app (1).webp",
+    "image": "https://i.ibb.co/zTCjnWMt/demo-app-1.webp",
     "title": "Drip Drop: Hydration Challenge",
     "companyName": "Water Games Studio",
     "id": 119,
@@ -342,7 +342,7 @@
     ]
   },
   {
-    "image": "../src/assets/demo-app (6).webp",
+    "image": "https://i.ibb.co/JjjBh1VH/demo-app-6.webp",
     "title": "ZenBudget: Minimalist Finance",
     "companyName": "ClearCash Inc.",
     "id": 120,
